NMS-13437: Added manager option to allow the controller to connect to its own VM